--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                     <div class="result__barCode">
                        
                     </div>
+
+                    <button id="fullscreenBtn">Повний екран</button>
                 </div>
             </div>
         </header>
